--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta http-equiv='cache-control' content='no-cache'> 
     <meta http-equiv='expires' content='0'> <meta http-equiv='pragma' content='no-cache'>
+    <!-- for Facebook -->          
+<meta property="og:title" content="" />
+<meta property="og:type" content="article" />
+<meta property="og:image" content="" />
+<meta property="og:url" content="" />
+<meta property="og:description" content="" />
     <meta
       name="description"
       content="Check your Spec"
