--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,18 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <!-- responsive Stylesheet -->
     <link rel="stylesheet" href="css/responsive.css">
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId            : '803651167213839',
+          autoLogAppEvents : true,
+          xfbml            : true,
+          version          : 'v12.0'
+        });
+      };
+    </script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+        
      
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
