--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
     <!-- for Facebook -->          
 <meta property="og:title" content="" />
 <meta property="og:type" content="article" />
-<meta property="og:image" content="https://checkspecstatus.com" />
+<meta property="og:image" content="https://checkspecstatus.com/images/men-badge-specupcoming.png" />
 <meta property="og:url" content="" />
 <meta property="og:description" content="" />
-<meta property="og:title" content="A Twitter for My Sister" />
+<meta property="og:title" content="Are you a SPEC" />
     <meta
       name="description"
       content="Check your Spec"
