--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 <meta property="og:image" content="https://checkspecstatus.com/images/men-badge-spectacular.png" />
 <meta property="og:url" content="" />
 <meta property="og:description" content="" />
+<meta property="og:title" content="Are you a SPEC" />
     <meta
       name="description"
       content="Check your Spec"
