--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <!-- for Facebook -->          
 <meta property="og:title" content="" />
 <meta property="og:type" content="article" />
+<meta property="og:image" content="https://checkspecstatus.com/images/twitter-share-image.jpg" />
 <meta property="og:url" content="" />
 <meta property="og:description" content="" />
 <meta property="og:title" content="Are you a SPEC" />
